BackEnd/RMEC-rm-service/src/main/java/com/example/demo/error/FteWrongFormatException.java
package com.example.demo.error;

public class FteWrongFormatException extends RuntimeException  {
 public FteWrongFormatException () {
	 super("Fte Wrong format Exception");
 }
}
